2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/disker/disker.py:
	  _openFile is used by two objects.  Rename self to loggable to make
	  clear this is a function, not a method.

2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/disker/disker.py:
	  Remove an inner import that was already at the top.
	  Log an exception when statting a file.

2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/eventcalendar.py:
	  Pychecker caught a method called deltatime when it is actually
	  timedelta.

2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/plugs/base.py:
	  Pychecker caught an invocation of defer. without the matching
	  import.  Importing.

2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/playlist/singledecodebin.py:
	  Pychecker caught an invocation of log. when there is no log
	  module imported.  Removing the log line.

2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/misc/httpserver/httpcached/strategy_base.py:
	  Adapt to name change.

2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/misc/httpserver/ourmimetypes.py (added):
	* flumotion/component/misc/httpserver/mimetypes.py (deleted):
	  Rename, so it doesn't conflict with a built-in module of the
	  same name that actually gets imported by twisted.web.static
	* flumotion/component/misc/httpserver/Makefile.am:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/misc/httpserver/localpath.py:
	  Adapt to name change.

2010-12-15  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/common/bundle.py:
	* flumotion/common/registry.py:
	* flumotion/manager/manager.py:
	* flumotion/test/test_manager_manager.py: